# SpriteBricks

./: .gitignore  CMakeLists.txt  README.md
appSrc/: CMakeLists.txt  PlayerController.cpp  PlayerController.h  SpriteRenderer.cpp  SpriteRenderer.h  TestGame.h  batchTest.cpp  gameTest.cpp  nyoom.h
src/: CMakeLists.txt
src/editor/: Editor.cpp  Editor.h
src/entity/: Component.h  Entity.cpp  Entity.h  Transform.cpp  Transform.h
src/game/: game.cpp  game.h
src/graphics/: batcher.cpp  batcher.h  graphics.h  graphicsDevice.cpp  graphicsDevice.h  material.cpp  material.h  shader.cpp  shader.h  window.cpp  window.h
src/input/: InputManager.cpp  InputManager.h
src/math/: rectangle.cpp  rectangle.h  vec.cpp  vec.h
src/texture/: Font.cpp  Font.h  Texture.cpp  Texture.h
